Add views folder for template with partials

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -12,12 +12,13 @@
   </head>
 
   <body>
+    <%- include('partials/_header') %>
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">
-          Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
+          Short URL ID: <a href="#<%= longURL %>"target="_blank"><%= id %></a>
         </p>
       </div>
       <div class="card-footer text-muted"></div>
