added edit option for long url

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -20,6 +20,7 @@
                     <tr>
                         <th scope="col">Short URL ID</th>
                         <th scope="col">Long URL</th>
+                        <th scope="col">Edit</th>
                         <th scope="col">Delete</th>
                     </tr>
                 </thead>
@@ -33,8 +34,13 @@
                                 <%= urls[id] %>
                             </td>
                             <td>
+                                <form method="POST" action="/urls/<%=id %>">
+                                    <button type="submit" class="btn btn-outline-primary my-1">Edit</button>
+                                </form>
+                            </td>
+                            <td>
                                 <form method="POST" action="/urls/<%=id %>/delete">
-                                    <button type="submit" class="btn btn-outline-danger">Delete</button>
+                                    <button type="submit" class="btn btn-outline-danger my-1">Delete</button>
                                 </form>
                             </td>
                         </tr>
