--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -21,6 +21,17 @@
           Short URL ID: <a href="#<%= longURL %>"target="_blank"><%= id %></a>
         </p>
       </div>
+      <h4>Edit:</h4>
+      <form method="POST" action="/urls/<%= id %>">
+        <label for="longURL">New Long URL:</label>
+        <input
+            type="text"
+            id="longURL"
+            name="longURL"
+            value="<%= longURL %>"
+          />
+          <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
       <div class="card-footer text-muted"></div>
     </div>
     <!-- Bootstrap JS -->
