changed get.post a bit but still not understanding how to look for cookies in browser

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -24,6 +24,7 @@
         name="username"
         placeholder="Username"
         style="width: 300px; margin: 1em"
+        autocomplete="username"
         />
         <button type="submit" class="btn btn-outline-dark">Login</button>
       </form>
