--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,6 +18,12 @@
           <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         </div>
       </div>
+      <% if (username) { %>
+      <form class="form-inline" action="/logout" method="POST">
+        <a>Logged in as: <%= username %> </a>
+        <button type="submit" class="btn btn-outline-dark">Logout</button>
+      </form>
+      <% } else { %>
       <form class="form-inline" action="/login" method="POST">
         <input 
         type="text" 
@@ -28,5 +34,6 @@
         />
         <button type="submit" class="btn btn-outline-dark">Login</button>
       </form>
+      <% } %>
     </nav>
   </header>
