created a space before log out in the browser

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -20,7 +20,7 @@
       </div>
       <% if (username) { %>
       <form class="form-inline" action="/logout" method="POST">
-        <a>Logged in as: <%= username %> </a>
+        <a>Logged in as: <%= username %>!&nbsp;</a>
         <button type="submit" class="btn btn-outline-dark">Logout</button>
       </form>
       <% } else { %>
