--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,39 +1,27 @@
 <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-success">
-      <a class="navbar-brand" href="/urls">TinyApp</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/urls">My URLs</a>
-          <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <a class="navbar-brand" href="/urls">TinyApp</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link" href="/urls">My URLs</a>
+                <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+            </div>
         </div>
-      </div>
-      <% if (username) { %>
-      <form class="form-inline" action="/logout" method="POST">
-        <a>Logged in as: <%= username %>!&nbsp;</a>
-        <button type="submit" class="btn btn-outline-dark">Logout</button>
-      </form>
-      <% } else { %>
-      <form class="form-inline" action="/login" method="POST">
-        <input 
-        type="text" 
-        name="username"
-        placeholder="Username"
-        style="width: 300px; margin: 1em"
-        autocomplete="username"
-        />
-        <button type="submit" class="btn btn-outline-dark">Login</button>
-      </form>
-      <% } %>
+        <% if (username) { %>
+            <form class="form-inline" action="/logout" method="POST">
+                <a>Logged in as: <%= username %>!&nbsp;</a>
+                <button type="submit" class="btn btn-outline-dark">Logout</button>
+            </form>
+            <% } else { %>
+                <form class="form-inline" action="/login" method="POST">
+                    <input type="text" name="username" placeholder="Username" style="width: 300px; margin: 1em"
+                        autocomplete="username" />
+                    <button type="submit" class="btn btn-outline-dark">Login</button>
+                </form>
+                <% } %>
     </nav>
-  </header>
+</header>
