--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,15 +11,15 @@
                 <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
             </div>
         </div>
-        <% if (username) { %>
+        <% if (user.email) { %>
             <form class="form-inline" action="/logout" method="POST">
-                <a>Logged in as: <%= username %>!&nbsp;</a>
+                <a>Logged in as: <%= user.email %>!&nbsp;</a>
                 <button type="submit" class="btn btn-outline-dark">Logout</button>
             </form>
             <% } else { %>
                 <form class="form-inline" action="/login" method="POST">
-                    <input type="text" name="username" placeholder="Username" style="width: 300px; margin: 1em"
-                        autocomplete="username" />
+                    <input type="email" name="email" placeholder="Email" style="width: 300px; margin: 1em"
+                        autocomplete="email" />
                     <button type="submit" class="btn btn-outline-dark">Login</button>
                 </form>
                 <% } %>
