--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,12 +13,16 @@
 </head>
 
 <body>
+    <%- include('partials/_header') %>
     <form class="form-inline" action="/register" method="POST">
         <div class="form-group mb-2">
             <label for="email">Email:</label>
             <input type="email" name="email" />
+        </div>
+        <div class="form-group mb-2">
+            <label for="password">Password:</label>
             <input type="password" name="password" />
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Register</button>
         </div>
     </form>
 </body>
