--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,15 +14,16 @@
 
 <body>
     <%- include('partials/_header') %>
-    <form class="form-inline" action="/login" method="POST">
-        <div class="form-group mb-2">
-            <label for="email">Email:</label>
-            <input type="email" name="email" />
-        </div>
-        <div class="form-group mb-2">
-            <label for="password">Password:</label>
-            <input type="password" name="password" />
-            <button type="submit" class="btn btn-primary">Login</button>
-        </div>
-    </form>
+        <h2>Login</h2>
+        <form action="/login" method="POST">
+            <div class="form-group mb-2">
+                <label for="email">Email address</label><br>
+                <input type="email" name="email" placeholder="Enter email" />
+            </div>
+            <div class="form-group mb-2">
+                <label for="password">Password</label><br>
+                <input type="password" name="password" placeholder="Password" /><br>
+                <button type="submit" class="btn btn-primary">Login</button>
+            </div>
+        </form>
 </body>
