--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,14 +14,15 @@
 
 <body>
     <%- include('partials/_header') %>
-    <form class="form-inline" action="/register" method="POST">
+    <h2>Create Account</h2>
+    <form action="/register" method="POST">
         <div class="form-group mb-2">
-            <label for="email">Email:</label>
-            <input type="email" name="email" />
+            <label for="email">Email address</label><br>
+            <input type="email" name="email" placeholder="Enter email" />
         </div>
         <div class="form-group mb-2">
-            <label for="password">Password:</label>
-            <input type="password" name="password" />
+            <label for="password">Password</label><br>
+            <input type="password" name="password" placeholder="Password" /><br>
             <button type="submit" class="btn btn-primary">Register</button>
         </div>
     </form>
