--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -34,7 +34,7 @@
                                 <%= urls[id] %>
                             </td>
                             <td>
-                                <form method="POST" action="/urls/<%=id %>">
+                                <form method="GET" action="/urls/<%=id %>">
                                     <button type="submit" class="btn btn-outline-primary my-1">Edit</button>
                                 </form>
                             </td>
