implemented basic permission features

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,12 +18,12 @@
         <form action="/login" method="POST">
             <div class="form-group mb-2">
                 <label for="email">Email address</label><br>
-                <input type="email" name="email" placeholder="Enter email" />
+                <input type="email" name="email" id="email" placeholder="Enter email" />
             </div>
             <div class="form-group mb-2">
                 <label for="password">Password</label><br>
-                <input type="password" name="password" placeholder="Password" /><br>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <input type="password" name="password" id="password" placeholder="Password" /><br>
             </div>
+            <button type="submit" class="btn btn-primary">Login</button>
         </form>
 </body>
